# python-project-lvl4

./: .env.example  .gitignore  .travis.yml  Makefile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
mainpage/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
mainpage/migrations/: 0001_initial.py  0002_auto_20200215_2113.py  0003_auto_20200221_1956.py  0004_auto_20200223_1052.py  0005_auto_20200227_1313.py
mainpage/templatetags/: custom_tags.py
static/: cover.css
static/CSS/: base.css
task_manager/: settings.py  urls.py
templates/: base.html  contact.html  features.html  header.html  home.html  index.html  main.html  task_details.html  task_list.html  task_view.html  view_task.html
templates/components/: footer.html  header.html
templates/pages/: about.html  settings.html  status_edit.html  statuses.html
templates/registration/: login.html  signup.html
templates/tasks/: djtasks.html  edit_task.html  home.html  new_task.html  task_confirm_delete.html  task_form.html  view_task.html
