[tool.poetry]
name = "slavarobotam_task_manager"
version = "0.1.0"
description = "\"Light task manager\""
authors = ["Mari <zefiratakuet@yandex.ru>"]
readme = "README.md"
classifiers = [
  "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
django-bootstrap4 = "^1.1"
rollbar = "^0.14.7"
python-dotenv = "^0.10.5"
whitenoise = "^5.0.1"
gunicorn = "^20.0.4"
psycopg2 = "2.7.7"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
